<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/about_intro"
                    android:src="@drawable/ic_action_help" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left"
                    android:text="@string/about_intro"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/about_city"
                    android:src="@drawable/ic_action_map" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left"
                    android:text="@string/about_city"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/about_warranty"
                    android:src="@drawable/ic_action_warning" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left"
                    android:text="@string/about_warranty"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>

<!--             <LinearLayout -->
<!--                 android:layout_width="match_parent" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_margin="8dp" -->
<!--                 android:orientation="horizontal" > -->

<!--                 <ImageButton -->
<!--                     android:layout_width="64dp" -->
<!--                     android:layout_height="64dp" -->
<!--                     android:background="@android:color/transparent" -->
<!--                     android:contentDescription="@string/about_credit" -->
<!--                     android:src="@drawable/ic_logo_coffee" /> -->

<!--                 <TextView -->
<!--                     android:layout_width="match_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_gravity="center_vertical" -->
<!--                     android:layout_marginLeft="8dp" -->
<!--                     android:fontFamily="sans-serif-light" -->
<!--                     android:gravity="left" -->
<!--                     android:text="@string/about_credit" -->
<!--                     android:textColor="#fff" -->
<!--                     android:textSize="16sp" /> -->
<!--             </LinearLayout> -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="clickMe"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/about_contact"
                    android:src="@drawable/ic_action_send_now" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="left"
                        android:text="@string/about_contact"
                        android:textColor="#fff"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="left"
                        android:text="@string/about_me"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>